--- a/css/normalize.css
+++ b/css/normalize.css
@@ -5,6 +5,11 @@
  * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
  */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
