--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,8 @@ a {
   width: 104px;
   height: 44px;
 
+  margin-top: 20px;
+
   color: #f9f9f9;
 
   font-family: "Lato Regular", "Arial", sans-serif;
@@ -280,7 +282,7 @@ a {
 }
 
 .navigation__btn:hover {
-  display: none;
+  opacity: 0;
 }
 
 .navigation__btn:hover + .navigation__list,
@@ -372,7 +374,7 @@ a {
   position: relative;
 
   margin: 0 auto;
-  margin-bottom: 115px;
+  margin-bottom: 30px;
 
   box-sizing: border-box;
   width: 522px;
@@ -384,18 +386,67 @@ a {
   text-align: center;
 }
 
-.phone-block__slider {
-  position: absolute;
-  top: 95px;
-  left: 50%;
-  transform: translateX(-50%);
+label[for="spoiler"] {
+  display: block;
 
   width: 50px;
   height: 15px;
 
+  margin: 0 auto;
+  margin-bottom: 50px;
+
   background-image: url("../img/icon__header--arrow.svg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
+
+  cursor: pointer;
+}
+
+.spoiler {
+  display: none;
+
+  padding-bottom: 82px;
+}
+
+#spoiler:checked ~ .spoiler {
+  display: block;
+}
+
+.spoiler__text {
+  width: 600px;
+
+  margin-bottom: 35px;
+
+  color: #f9f9f9;
+
+  font-family: "Lato Regular", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 30px;
+}
+
+.spoiler__text--title {
+  margin-bottom: 22px;
+
+  color: #f48647;
+
+  font-family: "Lato Bold", "Arial", sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 36px;
+}
+
+.spoiler__text--feature {
+  color: #f48647;
+}
+
+.spoiler__text--conclusion {
+  margin-top: 63px;
+
+  font-family: "Lato Bold", "Arial", sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 34px;
 }
 
 .phone-block__phone {
@@ -535,6 +586,7 @@ a {
 }
 
 .content--about-me {
+  min-height: 700px;
   background-color: #f4c547;
 }
 
