--- a/css/style.css
+++ b/css/style.css
@@ -243,8 +243,6 @@ a {
 
 .navigation__btn::before {
   content: "";
-  position: relative;
-  bottom: 2px;
 
   display: inline-block;
   vertical-align: middle;
@@ -260,8 +258,9 @@ a {
 
 .navigation__btn::after {
   content: "";
+
   position: relative;
-  bottom: 2px;
+  z-index: 2;
 
   display: inline-block;
   vertical-align: middle;
@@ -277,8 +276,8 @@ a {
 
 .navigation__list {
   position: absolute;
-  top: 20px;
-  right: -6px;
+  top: 22px;
+  right: -3px;
 
   display: none;
 
@@ -297,20 +296,21 @@ a {
 
   display: inline-block;
   vertical-align: top;
+  padding-bottom: 20px;
+  margin-right: 3px;
 }
 
 .navigation__link {
   position: relative;
+  z-index: 1;
 
   display: block;
   box-sizing: border-box;
-  width: 160px;
-  padding: 7px 5px;
-  margin-right: 13px;
+  padding: 7px 20px;
+  min-width: 175px;
+  min-height: 38px;
 
   text-align: center;
-
-  background-color: #f48647;
 
   color: #f9f9f9;
 
@@ -322,36 +322,74 @@ a {
 
 .navigation__link::before {
   content: "";
+
   position: absolute;
-  bottom: 0;
-  left: -10px;
+  top: 0;
+  left: 0;
+  z-index: -1;
 
-  width: 0;
-  height: 0;
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
 
-  border-bottom: 38px solid #f48647;
-  border-left: 10px solid transparent;
-}
+  background-color: #f48647;
 
-.navigation__link::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: -10px;
-
-  width: 0;
-  height: 0;
-
-  border-top: 38px solid #f48647;
-  border-right: 10px solid transparent;
+  transform: skew(-15deg);
 }
 
 .navigation__item:first-child::before {
   content: "";
   position: absolute;
   top: 0;
-  left: -6px;
-  z-index: 1;
+  left: 0;
+  z-index: 2;
+
+  width: 2px;
+  height: 38px;
+
+  background-color: #f9f9f9;
+
+  transform: rotate(15deg);
+}
+
+.navigation__item:hover > .navigation__link::before,
+.navigation__link--modal-window::before {
+  background-color: #f4c547;
+}
+
+.navigation__item:hover > .navigation__link,
+.navigation__link--modal-window {
+  color: #1a2232;
+}
+
+.navigation__modal-window {
+  position: absolute;
+  top: 58px;
+  right: 0;
+
+  display: none;
+}
+
+.navigation__item:hover > .navigation__modal-window,
+.navigation__modal-window:hover {
+  display: block;
+}
+
+.navigation__list--modal-window {
+  position: static;
+
+  display: block;
+  width: 900px;
+  margin-right: 14px;
+}
+
+.navigation__item--modal-window:last-child::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
 
   width: 2px;
   height: 38px;
@@ -379,18 +417,90 @@ a {
 
 .phone-block {
   position: relative;
+  z-index: 1;
 
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 
   box-sizing: border-box;
   width: 522px;
   height: 44px;
 
-  background: url("../img/bg__phone-block--rectangle.svg") no-repeat center;
-  background-size: 522px 44px;
-
   text-align: center;
+
+  font-size: 0;
+}
+
+.phone-block__phone {
+  position: relative;
+
+  box-sizing: border-box;
+  display: inline-block;
+  vertical-align: top;
+  width: 250px;
+  height: 45px;
+  padding: 0 25px;
+  margin-right: 3px;
+
+  color: #f9f9f9;
+
+  font-family: "Lato Regular", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 45px;
+}
+
+.phone-block__phone::before {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  border: 2px solid #f4c547;
+
+  transform: skew(-15deg);
+}
+
+.phone-block__btn {
+  position: relative;
+  box-sizing: border-box;
+  display: inline-block;
+  vertical-align: top;
+  width: 250px;
+  height: 45px;
+  padding: 0 25px;
+
+  color: #1a2232;
+
+  font-family: "Lato Regular", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 45px;
+}
+
+.phone-block__btn::before {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  background-color: #f4c547;
+
+  transform: skew(-15deg);
 }
 
 label[for="spoiler"] {
@@ -454,34 +564,6 @@ label[for="spoiler"] {
   font-weight: 700;
   font-size: 28px;
   line-height: 34px;
-}
-
-.phone-block__phone {
-  position: absolute;
-  top: 50%;
-  left: 50px;
-  transform: translateY(-50%);
-
-  color: #f9f9f9;
-
-  font-family: "Lato Regular", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 11.26px;
-}
-
-.phone-block__btn {
-  position: absolute;
-  top: 50%;
-  right: 60px;
-  transform: translateY(-50%);
-
-  color: #1a2232;
-
-  font-family: "Lato Regular", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 11.26px;
 }
 
 .content {
