ВыЗавершена синхронизация трэка с галереей

--- a/css/style.css
+++ b/css/style.css
@@ -758,7 +758,6 @@ label[for="spoiler"] {
   position: relative;
   z-index: 1;
 
-  padding-left: 0.566%;
   margin-left: 3.6%;
 
   overflow: auto;
@@ -773,7 +772,7 @@ label[for="spoiler"] {
 
 .gallery__container {
   position: absolute;
-  left: 10px;
+  left: 0;
 }
 
 .gallery--container {
@@ -806,8 +805,9 @@ label[for="spoiler"] {
 .scroll {
   position: absolute;
   bottom: 0;
-  left: 1.5%;
-  right: 5%;
+  left: 4.166%;
+  right: 4.166%;
+  z-index: 1;
 
   display: none;
   height: 20px;
@@ -845,7 +845,7 @@ label[for="spoiler"] {
   left: 15px;
 
   width: 25%;
-  height: 100%;
+  height: 20px;
 
   /*margin: 0 15px;*/
 
